--- a/css/style.css
+++ b/css/style.css
@@ -52,12 +52,11 @@ header p{
 
 
 /*Req 1*/
-nav a {
+nav a{
   color: black;
   font-weight: bold;
   text-decoration: none;
 }
-
 /*Req 2*/
 /*Write selector/rule property to add an underline when
 links in the navigation are in the hover or focus state.*/
@@ -73,29 +72,30 @@ nav a:hover {
   -webkit-transition: top 1s ease-out;
   transition: top 1s ease-out;
   z-index: 1;
+
   /*Your code here*/
-  position: relative;
-  bottom: 50px;
+  position: absolute;
+  top: -50px;
 }
 /*Req 3b*/
 /*Write selector/rule property to position the skip class element*/
 .skip a:focus {
-  position: relative;
-  top: 10px;
+  top: -10px;
 }
 
 /*Req 4*/
 /*Write selector/rule property to style all elements when in focus*/
 *:focus {
-  outline: 2px dashed;
-}
+  border-top: 2px dashed #000000;
+  border-bottom: 2px dashed #000000;
+} 
 
 /*Req 5*/
 .container{
   /*Your Code Here*/
   display: grid;
   grid-template-columns: 1fr 3fr 3fr 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: repeat(4, auto);
   row-gap: 20px;
 }
 
@@ -112,23 +112,22 @@ header{
   margin-bottom: 25px;
   /*Req 6b*/
   /*Set background-image to header.jpg */
-  background-image: url("header.jpg");
-
+  background-image: url("../images/header.jpg");
+  grid-column: 1 / -1;
 }
+
 /*Req 7a*/
 .about, .method, .client, .contacts{
   /*Your Code Here*/
   grid-column: 2 / span 2;
-
 }
 
 /*Req 8a, 8b, and 8c*/
 .about-image, .method-image, .client-image, .contact-image{
   /*Your Code Here*/
-  grid-column: span all;
+  grid-column: 1 / -1;
   max-height: 650px;
-  max-width: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 
 /*Req 7b & 8d*/
@@ -165,10 +164,8 @@ header{
   border: 10px solid black;
   padding: 30px;
   /*Your code here:*/
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
+  text-align: center;
+  align-self: center;
 }
 
 
@@ -182,12 +179,13 @@ header{
   nav{
     padding: 30px 0px;
     /*Your code here:*/
+    text-align: right;
+    vertical-align: middle;
   }
 
   /*Req 11*/
   .container{
     /*Your code here:*/
-    display: grid;
     grid-template-columns: 50px auto 500px auto 50px;
     grid-template-rows: 400px 425px 425px 400px;
   }
